# wikidata

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: getfromnet.rs  serialize.rs
items/: Q1.json  Q106975887.json  Q31928.json  Q42.json  Q45.json  Q513.json  README.md
src/: entity.rs  ids.rs  lib.rs  text.rs
src/ids/: consts.rs
src/ids/consts/: pid.rs  qid.rs  qid_unit_suffixes.rs
tests/: claim-from-json.rs  entity-from-json.rs
