[package]
name = "wikidata"
version = "1.1.0"
edition = "2018"
repository = "https://github.com/syvb/wikidata/"
license = "Apache-2.0"
description = "A library for working with Wikidata in Rust"
exclude = [
    "items/"
]

[dependencies]
chrono = { version = "0.4.41", features = ["std", "serde"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
