[package]
name = "wikidata"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/syvb/wikidata/"
license = "Apache-2.0"
description = "A library for working with Wikidata in Rust"
exclude = ["items/"]

[dependencies]
chrono = { version = "0.4.31", features = [
    "std",
    "serde",
], default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
